test/typecheck/y_error_15.j.gold
./y_error_15.j:13:5: error: field 'x' already exists in class 'A'
    |
 13 |     Int x;
    |     ^
